--- a/viikko2/verkkokauppa-1/pyproject.toml
+++ b/viikko2/verkkokauppa-1/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+autopep8 = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
