--- a/viikko5/tennis/pyproject.toml
+++ b/viikko5/tennis/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
+autopep8 = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
